--- a/package.json
+++ b/package.json
@@ -5,18 +5,21 @@
   "description": "FRONT - Plateforme associative",
   "main": "src/index.js",
   "dependencies": {
-    "@material-ui/core": "^3.1.1",
-    "@material-ui/icons": "^3.0.1",
+    "@date-io/date-fns": "^1.3.6",
+    "@material-ui/core": "^4.0.2",
+    "@material-ui/icons": "^4.0.1",
+    "@material-ui/pickers": "^3.1.0",
     "@rebass/grid": "^6.0.0-7",
     "axios": "^0.17.1",
+    "date-fns": "^2.0.0-alpha.31",
     "emoji-mart": "^2.8.1",
-    "konva": "^2.4.0",
+    "konva": "^3.3.2",
     "material-ui-pickers": "^1.0.0-rc.15",
     "moment": "^2.22.2",
-    "react": "^16.5.2",
+    "react": "^16.8.6",
     "react-big-calendar": "^0.17.0",
-    "react-dom": "^16.5.2",
-    "react-konva": "^1.7.15",
+    "react-dom": "^16.8.6",
+    "react-konva": "^16.8.7-2",
     "react-lazyload": "^2.3.0",
     "react-router-dom": "^4.3.1",
     "react-transition-group": "^2.5.0",
@@ -31,7 +34,7 @@
     "@types/jest": "^23.3.10",
     "@types/moment": "^2.13.0",
     "@types/node": "^10.12.18",
-    "@types/react": "^16.7.18",
+    "@types/react": "^16.8.19",
     "@types/react-big-calendar": "^0.20.2",
     "@types/react-dom": "^16.0.11",
     "@types/react-lazyload": "^2.3.1",
