cleanup old flow commands

--- a/package.json
+++ b/package.json
@@ -56,10 +56,8 @@
     "build": "react-scripts build",
     "build:prod": "cross-env GENERATE_SOURCEMAP=false REACT_APP_HTTP_PROTOCOL=https REACT_APP_WS_PROTOCOL=wss REACT_APP_BACKEND_URL=iseplive.fr/api react-scripts build",
     "test": "react-scripts test",
-    "check": "./check-flow-annotation.sh",
     "eject": "react-scripts eject",
-    "lint:css": "stylelint './src/**/*.js'",
-    "flow": "flow --show-all-errors"
+    "lint:css": "stylelint './src/**/*.js'"
   },
   "browserslist": {
     "production": [
