--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "iseplife",
-  "version": "1.3.0",
+  "version": "1.4.0",
   "private": true,
   "description": "FRONT - Plateforme associative",
   "main": "src/index.js",
@@ -42,6 +42,7 @@
     "@types/react-router-dom": "^4.3.3",
     "@types/rebass__grid": "^6.0.2",
     "@types/styled-components": "^4.1.4",
+    "browserslist": "^4.6.1",
     "cross-env": "^5.2.0",
     "npm-run-all": "^4.1.3",
     "react-scripts": "3.0.0",
