--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/react-dom": "^16.9.0",
     "axios": "^0.19.0",
     "date-fns": "^2.8.1",
+    "formik": "^2.0.7",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
