--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-router-dom": "^5.1.3",
     "axios": "^0.19.0",
     "date-fns": "^2.8.1",
     "formik": "^2.0.7",
+    "i18next": "^19.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-i18next": "^11.2.6",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "typescript": "~3.7.2"
