--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "formik": "^2.0.7",
     "i18next": "^19.0.2",
     "react": "^16.12.0",
+    "react-calendar": "^2.19.2",
     "react-dom": "^16.12.0",
     "react-i18next": "^11.2.6",
     "react-router-dom": "^5.1.2",
