--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
+    "antd": "^3.26.7",
     "axios": "^0.19.0",
     "date-fns": "^2.8.1",
     "formik": "^2.0.7",
