--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.7",
+    "redux-devtools": "^3.5.0",
     "tailwindcss": "^1.1.4"
   }
 }
