--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
     "i18next": "^19.0.2",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "leaflet": "^1.6.0",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-calendar": "^2.19.2",
     "react-dom": "^16.12.0",
     "react-i18next": "^11.2.6",
+    "react-leaflet": "^2.6.1",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
@@ -61,6 +63,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-leaflet": "^2.5.0",
     "@types/react-redux": "^7.1.7",
     "cross-env": "^7.0.0",
     "redux-devtools": "^3.5.0",
