--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "scripts": {
     "start": "npm run tailwind:css && react-scripts start",
+    "start:dev": "npm run tailwind:css && cross-env GENERATE_SOURCEMAP=false REACT_APP_HTTP_PROTOCOL=https REACT_APP_WS_PROTOCOL=wss REACT_APP_BACKEND_URL=iseplife.herokuapp.com/ react-scripts start",
     "build": "npm run tailwind:css && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -55,6 +56,7 @@
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.7",
+    "cross-env": "^7.0.0",
     "redux-devtools": "^3.5.0",
     "tailwindcss": "^1.1.4"
   }
