--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "@types/react-router-dom": "^5.1.3",
     "antd": "^3.26.7",
     "axios": "^0.19.0",
+    "customize-cra": "^0.9.1",
     "date-fns": "^2.8.1",
     "formik": "^2.0.7",
     "i18next": "^19.0.2",
     "react": "^16.12.0",
+    "react-app-rewired": "^2.1.5",
     "react-calendar": "^2.19.2",
     "react-dom": "^16.12.0",
     "react-i18next": "^11.2.6",
@@ -32,11 +34,11 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "npm run tailwind:css && react-scripts start",
-    "start:dev": "npm run tailwind:css && cross-env GENERATE_SOURCEMAP=false REACT_APP_HTTP_PROTOCOL=https REACT_APP_WS_PROTOCOL=wss REACT_APP_API_URL=iseplife.herokuapp.com/ react-scripts start",
-    "build": "npm run tailwind:css && react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject",
+    "start": "npm run tailwind:css && react-app-rewired start",
+    "start:dev": "npm run tailwind:css && cross-env GENERATE_SOURCEMAP=false REACT_APP_HTTP_PROTOCOL=https REACT_APP_WS_PROTOCOL=wss REACT_APP_API_URL=iseplife.herokuapp.com/ react-app-rewired start",
+    "build": "npm run tailwind:css && react-app-rewired build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject",
     "tailwind:css": "tailwind build public/css/tailwind.css -c tailwind.config.js -o public/css/index.css"
   },
   "eslintConfig": {
