--- a/package.json
+++ b/package.json
@@ -18,10 +18,13 @@
     "@types/react-router-dom": "^5.1.3",
     "antd": "^3.26.7",
     "axios": "^0.19.0",
+    "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
     "date-fns": "^2.8.1",
     "formik": "^2.0.7",
     "i18next": "^19.0.2",
+    "less": "^3.11.1",
+    "less-loader": "^5.0.0",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-calendar": "^2.19.2",
