--- a/package.json
+++ b/package.json
@@ -37,9 +37,10 @@
     "typescript": "~3.7.2"
   },
   "scripts": {
-    "start": "npm run tailwind:css && react-app-rewired start",
-    "start:dev": "npm run tailwind:css && cross-env GENERATE_SOURCEMAP=false REACT_APP_HTTP_PROTOCOL=https REACT_APP_WS_PROTOCOL=wss REACT_APP_API_URL=iseplife.herokuapp.com/ react-app-rewired start",
-    "build": "npm run tailwind:css && react-app-rewired build",
+    "start": "yarn run tailwind:css && react-app-rewired start",
+    "start:dev": "yarn run tailwind:css && cross-env GENERATE_SOURCEMAP=false REACT_APP_HTTP_PROTOCOL=https REACT_APP_WS_PROTOCOL=wss REACT_APP_API_URL=iseplife.herokuapp.com/ react-app-rewired start",
+    "build": "yarn run tailwind:css && react-app-rewired build",
+    "build:dev": "yarn run tailwind:css && cross-env GENERATE_SOURCEMAP=false REACT_APP_HTTP_PROTOCOL=https REACT_APP_WS_PROTOCOL=wss REACT_APP_API_URL=iseplife.herokuapp.com/ react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
     "tailwind:css": "tailwind build public/css/tailwind.css -c tailwind.config.js -o public/css/index.css"
