--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -23,6 +23,6 @@ deploy:
     - apt-get install -y ruby-dev
     - gem install dpl
     - cd build
-    - dpl --provider=heroku --app=iseplife-front --api-key=$HEROKU_API_KEY
+    - dpl --provider=heroku --app=iseplife-front --api-key=$HEROKU_API_KEY --skip_cleanup
   only:
     - master
