--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,11 @@ stages:
   - build
   - deploy
 
+cache:
+  paths:
+    - .yarn
+    - node_modules/
+
 build:
   stage: build
   image: node:latest
@@ -12,17 +17,5 @@ build:
   script:
     - yarn install --frozen-lockfile
     - yarn run build:dev
-  only:
-    - master
-
-deploy:
-  stage: deploy
-  image: ruby:latest
-  script:
-    - apt-get update -qy
-    - apt-get install -y ruby-dev
-    - gem install dpl
-    - cd build
-    - dpl --provider=heroku --app=iseplife-front --api-key=$HEROKU_API_KEY --skip_cleanup
   only:
     - master
