--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-i18next": "^11.2.6",
     "react-leaflet": "^2.6.1",
     "react-redux": "^7.1.3",
+    "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.3.0",
     "redux": "^4.0.5",
