--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,6 +2,9 @@ image: docker:latest
 services:
   - docker:dind
 
+variables:
+  FRONT_VERSION: v1.4
+
 stages:
   - build
   - package
@@ -30,7 +33,7 @@ docker-build:
   stage: package
   script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-    - docker build -t $CI_REGISTRY_IMAGE/front:$APP_VERSION -t $CI_REGISTRY_IMAGE/front:latest .
+    - docker build -t $CI_REGISTRY_IMAGE/front:$FRONT_VERSION -t $CI_REGISTRY_IMAGE/front:latest .
     - docker push $CI_REGISTRY_IMAGE/front:$APP_VERSION
     - docker push $CI_REGISTRY_IMAGE/front:latest
   dependencies:
