--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -34,7 +34,7 @@ docker-build:
   script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
     - docker build -t $CI_REGISTRY_IMAGE/front:$FRONT_VERSION -t $CI_REGISTRY_IMAGE/front:latest .
-    - docker push $CI_REGISTRY_IMAGE/front:$APP_VERSION
+    - docker push $CI_REGISTRY_IMAGE/front:$FRONT_VERSION
     - docker push $CI_REGISTRY_IMAGE/front:latest
   dependencies:
     - react-build
