--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -33,9 +33,9 @@ docker-build:
   stage: package
   script:
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-    - docker build -t $CI_REGISTRY_IMAGE/front:$FRONT_VERSION -t $CI_REGISTRY_IMAGE/front:latest .
-    - docker push $CI_REGISTRY_IMAGE/front:$FRONT_VERSION
-    - docker push $CI_REGISTRY_IMAGE/front:latest
+    - docker build -t $CI_REGISTRY_IMAGE:$FRONT_VERSION -t $CI_REGISTRY_IMAGE:latest .
+    - docker push $CI_REGISTRY_IMAGE:$FRONT_VERSION
+    - docker push $CI_REGISTRY_IMAGE:latest
   dependencies:
     - react-build
   only:
