--- a/nginx.conf
+++ b/nginx.conf
@@ -1,9 +1,10 @@
 server {
-  listen  80;
+    listen       80;
+    #server_name  localhost;
 
-  location / {
-    root   /usr/share/nginx/html;
-    index  index.html index.htm;
-    try_files $uri index.html =404;
-  }
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html;
+        try_files $uri $uri/ /index.html;
+    }
 }
