--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "less-loader": "^5.0.0",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
+    "react-big-calendar": "^0.26.0",
     "react-calendar": "^2.19.2",
     "react-dom": "^16.12.0",
     "react-i18next": "^11.2.6",
@@ -62,6 +63,7 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "@types/react-big-calendar": "^0.24.2",
     "@types/react-leaflet": "^2.5.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
