--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "url": "git+https://git.dev.juniorisep.com/iseplife/front"
   },
   "dependencies": {
+    "@ant-design/compatible": "^1.0.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
@@ -17,26 +18,26 @@
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
     "@types/react-router-dom": "^5.1.3",
-    "antd": "^3.26.7",
+    "antd": "^4.4.1",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
     "date-fns": "^2.8.1",
     "formik": "^2.0.7",
     "i18next": "^19.0.2",
+    "leaflet": "^1.6.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
-    "leaflet": "^1.6.0",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-calendar": "^2.19.2",
     "react-dom": "^16.12.0",
     "react-i18next": "^11.2.6",
     "react-leaflet": "^2.6.1",
-    "react-redux": "^7.1.3",
     "react-photo-gallery": "^8.0.0",
+    "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0",
+    "react-scripts": "^3.4.1",
     "redux": "^4.0.5",
     "typescript": "~3.7.2"
   },
