--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/leaflet": "^1.5.8",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
+    "@types/react-big-calendar": "^0.24.2",
     "@types/react-dom": "^16.9.0",
     "@types/react-big-calendar": "^0.24.2",
     "@types/react-leaflet": "^2.5.0",
