--- a/package.json
+++ b/package.json
@@ -9,15 +9,6 @@
   },
   "dependencies": {
     "@ant-design/compatible": "^1.0.4",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
-    "@types/leaflet": "^1.5.8",
-    "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
-    "@types/react-dom": "^16.9.0",
-    "@types/react-router-dom": "^5.1.3",
     "antd": "^4.4.1",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
@@ -66,9 +57,23 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^24.0.0",
+    "@types/leaflet": "^1.5.8",
+    "@types/node": "^12.0.0",
+    "@types/react": "^16.9.0",
+    "@types/react-dom": "^16.9.0",
     "@types/react-leaflet": "^2.5.0",
     "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
+    "@typescript-eslint/eslint-plugin": "^3.6.0",
+    "@typescript-eslint/parser": "^3.6.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "cross-env": "^7.0.0",
+    "eslint": "^7.4.0",
+    "eslint-plugin-react": "^7.20.3",
+    "eslint-plugin-react-hooks": "^4.0.7",
     "redux-devtools": "^3.5.0",
     "tailwindcss": "^1.1.4"
   }
