--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^3.4.1",
+    "recoil": "^0.0.10",
     "redux": "^4.0.5",
     "typescript": "~3.7.2"
   },
@@ -57,22 +58,21 @@
     ]
   },
   "devDependencies": {
-    "cross-env": "^7.0.0",
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.3.2",
+    "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/leaflet": "^1.5.8",
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-big-calendar": "^0.24.2",
     "@types/react-dom": "^16.9.0",
-    "@types/react-big-calendar": "^0.24.2",
     "@types/react-leaflet": "^2.5.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^3.6.0",
     "@typescript-eslint/parser": "^3.6.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "cross-env": "^7.0.0",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.7",
     "redux-devtools": "^3.5.0",
