--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -23,10 +23,16 @@
     ],
     "rules": {
         "no-var": "warn",
+        "react-hooks/rules-of-hooks": "error",
+        "react-hooks/exhaustive-deps": [
+            "warn",
+            {
+                "additionalHooks": "useRecoilCallback"
+            }
+        ],
         "react/prop-types": "off",
         "indent": [
-            "error",
-            "tab"
+            "error", 4, {"SwitchCase": 1}
         ],
         "quotes": [
             "error",
