fix(ci): try fix docker limit

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,18 +1,14 @@
-image: docker:latest
+image: docker:19.03.0
 services:
-  - docker:dind
+  - docker:19.03-dind
 
 variables:
   FRONT_VERSION: v1.4
+
 cache:
   paths:
     - .yarn
     - node_modules/
-
-before_script:
-  - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
-  - docker login -u $DOCKER_LOGIN -p $DOCKER_TOKEN
-
 
 stages:
   - test
@@ -46,6 +42,9 @@ react-build:
 
 docker-build:
   stage: package
+  before_script:
+    - docker login -u gitlab-ci-token -p $CI_JOB_TOKEN $CI_REGISTRY
+    - docker login -u $DOCKER_LOGIN -p $DOCKER_TOKEN
   script:
     - echo "=== BUILDING DOCKER IMAGES ==="
     - docker build -t $CI_REGISTRY_IMAGE:$FRONT_VERSION -t $CI_REGISTRY_IMAGE:latest .
