--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "antd": "^4.4.1",
+    "autoprefixer": "^10.2.4",
     "axios": "^0.19.0",
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
@@ -18,6 +19,7 @@
     "leaflet": "^1.6.0",
     "less": "^3.11.1",
     "less-loader": "^5.0.0",
+    "postcss": "^8.2.6",
     "react": "^16.12.0",
     "react-app-rewired": "^2.1.5",
     "react-big-calendar": "^0.26.0",
@@ -76,6 +78,6 @@
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.7",
     "redux-devtools": "^3.5.0",
-    "tailwindcss": "^1.1.4"
+    "tailwindcss": "^2.0.3"
   }
 }
