--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "url": "git+https://git.dev.juniorisep.com/iseplife/front"
   },
   "dependencies": {
+    "@ant-design/icons": "4.0.0",
+    "@ant-design/icons-svg": "^4.1.0",
     "antd": "^4.4.1",
     "autoprefixer": "^10.2.4",
     "axios": "^0.19.0",
@@ -24,16 +26,16 @@
     "react-app-rewired": "^2.1.5",
     "react-big-calendar": "^0.26.0",
     "react-calendar": "^2.19.2",
-    "react-dom": "^16.12.0",
+    "react-dom": "^16.13.1",
     "react-i18next": "^11.2.6",
     "react-leaflet": "^2.6.1",
     "react-photo-gallery": "^8.0.0",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "^3.4.1",
+    "react-scripts": "^4.0.1",
     "recoil": "^0.0.10",
     "redux": "^4.0.5",
-    "typescript": "~3.7.2"
+    "typescript": "~4.0.0"
   },
   "scripts": {
     "start": "yarn run tailwind:css && react-app-rewired start",
@@ -66,14 +68,14 @@
     "@types/jest": "^24.0.0",
     "@types/leaflet": "^1.5.8",
     "@types/node": "^12.0.0",
-    "@types/react": "^16.9.0",
+    "@types/react": "^17.0.1",
     "@types/react-big-calendar": "^0.24.2",
-    "@types/react-dom": "^16.9.0",
+    "@types/react-dom": "^17.0.1",
     "@types/react-leaflet": "^2.5.0",
     "@types/react-redux": "^7.1.7",
     "@types/react-router-dom": "^5.1.3",
-    "@typescript-eslint/eslint-plugin": "^3.6.0",
-    "@typescript-eslint/parser": "^3.6.0",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "@typescript-eslint/parser": "^3.10.0",
     "cross-env": "^7.0.0",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.7",
