--- a/package.json
+++ b/package.json
@@ -11,18 +11,13 @@
     "@ant-design/icons": "4.0.0",
     "@ant-design/icons-svg": "^4.1.0",
     "antd": "^4.4.1",
-    "autoprefixer": "^10.2.4",
     "axios": "^0.21.0",
     "babel-plugin-import": "^1.13.0",
-    "customize-cra": "^0.9.1",
     "date-fns": "^2.8.1",
     "formik": "^2.0.7",
     "i18next": "^19.0.2",
     "leaflet": "^1.6.0",
-    "less": "^3.11.1",
-    "less-loader": "^5.0.0",
     "lightbox-react": "^0.3.8",
-    "postcss": "^8.2.6",
     "react": "^16.13.1",
     "react-app-rewired": "^2.1.5",
     "react-big-calendar": "^0.26.0",
@@ -38,9 +33,9 @@
   },
   "scripts": {
     "start": "yarn run tailwind:css && react-app-rewired start",
-    "start:dev": "yarn run tailwind:css && cross-env GENERATE_SOURCEMAP=false REACT_APP_HTTP_PROTOCOL=https REACT_APP_WS_PROTOCOL=wss REACT_APP_API_URL=dev.iseplife.fr/api react-app-rewired start",
+    "start:prod": "yarn run tailwind:css && cross-env GENERATE_SOURCEMAP=false REACT_APP_HTTP_PROTOCOL=https REACT_APP_WS_PROTOCOL=wss REACT_APP_API_URL=dev.iseplife.fr/api react-app-rewired start",
     "build": "yarn run tailwind:css && react-app-rewired build",
-    "build:dev": "yarn run tailwind:css && cross-env GENERATE_SOURCEMAP=false CI=false REACT_APP_HTTP_PROTOCOL=https REACT_APP_WS_PROTOCOL=wss REACT_APP_API_URL=dev.iseplife.fr/api react-app-rewired build",
+    "build:prod": "yarn run tailwind:css && cross-env GENERATE_SOURCEMAP=false CI=false REACT_APP_HTTP_PROTOCOL=https REACT_APP_WS_PROTOCOL=wss REACT_APP_API_URL=dev.iseplife.fr/api react-app-rewired build",
     "test": "react-app-rewired test",
     "eject": "react-app-rewired eject",
     "tailwind:css": "tailwind build public/css/tailwind.css -c tailwind.config.js -o public/css/index.css"
@@ -77,6 +72,11 @@
     "cross-env": "^7.0.0",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.0.7",
-    "tailwindcss": "^2.0.3"
+    "tailwindcss": "~2.1.3",
+    "postcss": "^8.2.6",
+    "less": "^3.11.1",
+    "customize-cra": "^0.9.1",
+    "less-loader": "^5.0.0",
+    "autoprefixer": "^10.2.4"
   }
 }
