--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -18,8 +18,9 @@ stages:
 test:
   stage: test
   image: node:12.13.1
-  script:
+  before_script:
     - npm upgrade --global yarn
+  script:
     - yarn install --ignore-optional --frozen-lockfile --cache-folder .yarn
     - yarn run build:prod
   rules:
@@ -32,8 +33,9 @@ react-build:
   artifacts:
     paths:
       - build/
+  before_script:
+    - npm upgrade --global yarn
   script:
-    - echo "=== BUILDING REACT PROD ==="
     - yarn install --ignore-optional --frozen-lockfile --cache-folder .yarn
     - yarn run build:prod
   retry: 2
