--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "date-fns": "^2.8.1",
     "formik": "^2.0.7",
     "i18next": "^19.0.2",
-    "leaflet": "^1.7.1",
+    "react-leaflet": "^2.8.0",
+    "leaflet": "1.6.0",
     "lightbox-react": "^0.3.8",
     "react": "^17.0.1",
     "react-app-rewired": "^2.1.5",
@@ -54,7 +55,6 @@
     "react-calendar": "^2.19.2",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.2.6",
-    "react-leaflet": "^3.2.1",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.1",
@@ -66,12 +66,12 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
-    "@types/leaflet": "^1.7.4",
+    "@types/leaflet": "^1.6.0",
+    "@types/react-leaflet": "^2.8.2",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.1",
     "@types/react-big-calendar": "^0.24.2",
     "@types/react-dom": "^17.0.1",
-    "@types/react-leaflet": "^2.8.2",
     "@types/react-router-dom": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.10.0",
