--- a/package.json
+++ b/package.json
@@ -46,15 +46,16 @@
     "date-fns": "^2.8.1",
     "formik": "^2.0.7",
     "i18next": "^19.0.2",
-    "react-leaflet": "^2.8.0",
     "leaflet": "1.6.0",
     "lightbox-react": "^0.3.8",
+    "pastel-color": "^1.0.3",
     "react": "^17.0.1",
     "react-app-rewired": "^2.1.5",
     "react-big-calendar": "^0.35.0",
     "react-calendar": "^2.19.2",
     "react-dom": "^17.0.1",
     "react-i18next": "^11.2.6",
+    "react-leaflet": "^2.8.0",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "^4.0.1",
@@ -67,11 +68,11 @@
     "@testing-library/user-event": "^7.1.2",
     "@types/jest": "^24.0.0",
     "@types/leaflet": "^1.6.0",
-    "@types/react-leaflet": "^2.8.2",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.1",
     "@types/react-big-calendar": "^0.24.2",
     "@types/react-dom": "^17.0.1",
+    "@types/react-leaflet": "^2.8.2",
     "@types/react-router-dom": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "@typescript-eslint/parser": "^3.10.0",
