--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "postcss": "^8.4.5",
     "postcss-less": "^5.0.0",
     "react-scripts": "^5.0.0",
+    "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.7",
     "typescript": "^4.5.4"
   }
