--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "recoil": "^0.1.2"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.3.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
