--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -76,7 +76,7 @@ build-dev:
     paths:
       - build/
   rules:
-    - if: '$CI_COMMIT_REF_NAME == "staging"'
+    - if: '$CI_COMMIT_REF_NAME == "master"'
 docker-build:
   stage: docker
   before_script:
@@ -87,7 +87,7 @@ docker-build:
     - docker push iseplife/front:$FRONT_VERSION
     - docker push iseplife/front:latest
   dependencies:
-    - maven-build
+    - build-dev
   rules:
     - if: '$CI_COMMIT_REF_NAME == "master"'
 
