--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -87,7 +87,7 @@ docker-build:
     - docker push iseplife/front:$FRONT_VERSION
     - docker push iseplife/front:latest
   dependencies:
-    - build-prod
+    - build-dev
   rules:
     - if: '$CI_COMMIT_REF_NAME == "master"'
 
