--- a/default.conf
+++ b/default.conf
@@ -1,12 +1,10 @@
 server {
     listen       80;
-    #server_name  localhost;
 
     add_header Strict-Transport-Security  "max-age=31536000" always;
-    add_header Content-Security-Policy "default-src 'self';" always;
     add_header X-Content-Type-Options "nosniff" always;
     add_header X-Frame-Options DENY always;
-    add_header Referrer-Policy "strict-origin" always;
+   # add_header Referrer-Policy "strict-origin" always;
     add_header Permissions-Policy "geolocation=();midi=();notifications=();push=();sync-xhr=();microphone=();camera=();magnetometer=();gyroscope=();speaker=(self);vibrate=();fullscreen=(self);payment=();";
 
     location / {
