--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "react-leaflet": "^2.8.0",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.1.2",
-    "recoil": "^0.1.2"
+    "recoil": "^0.1.2",
+    "tailwindcss-textshadow": "^2.1.3"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.3.1",
