--- a/package.json
+++ b/package.json
@@ -8,10 +8,6 @@
     "url": "git+https://github/iseplife/front"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -31,6 +27,7 @@
   "dependencies": {
     "@ant-design/icons": "4.0.0",
     "@ant-design/icons-svg": "^4.1.0",
+    "@fingerprintjs/fingerprintjs": "^3.3.3",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
@@ -47,6 +44,8 @@
     "lightbox-react": "^0.3.8",
     "pastel-color": "^1.0.3",
     "react": "^17.0.1",
+    "react-app-rewire-workbox": "^2.0.1",
+    "react-app-rewired": "^2.2.1",
     "react-big-calendar": "^0.35.0",
     "react-calendar": "^2.19.2",
     "react-dom": "^17.0.1",
