--- a/package.json
+++ b/package.json
@@ -8,6 +8,11 @@
     "url": "git+https://github/iseplife/front"
   },
   "scripts": {
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "start-sw": "yarn run build && serve build",
+    "test": "react-app-rewired test",
+    "eject": "react-app-rewired eject"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -54,7 +59,8 @@
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.1.2",
     "recoil": "^0.1.2",
-    "tailwindcss-textshadow": "^2.1.3"
+    "tailwindcss-textshadow": "^2.1.3",
+    "workbox-webpack-plugin": "^6.5.2"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.3.1",
@@ -81,6 +87,7 @@
     "postcss": "^8.4.5",
     "postcss-less": "^5.0.0",
     "react-scripts": "^5.0.0",
+    "serve": "^13.0.2",
     "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.7",
     "typescript": "^4.5.4"
