--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "date-fns": "^2.8.1",
     "dexie": "^3.2.1",
     "dexie-react-hooks": "^1.1.1",
+    "fast-average-color": "^7.1.0",
     "formik": "^2.0.7",
     "i18next": "^19.0.2",
     "leaflet": "1.6.0",
