--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "react-dom": "^17.0.1",
     "react-i18next": "^11.2.6",
     "react-leaflet": "^2.8.0",
+    "react-mount-animation": "^0.0.11",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.1.2",
     "recoil": "^0.1.2",
