--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "antd": "^4.4.1",
     "axios": "^0.24.0",
+    "broadcast-channel": "^4.13.0",
     "date-fns": "^2.8.1",
     "dexie": "^3.2.1",
     "dexie-react-hooks": "^1.1.1",
