--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -81,11 +81,10 @@ docker-build:
   stage: docker
   before_script:
     - FRONT_VERSION=$(grep -m1 version package.json | awk -F\" '{ print $4 }')
-    - docker login -u $DOCKER_LOGIN -p $DOCKER_TOKEN
+    - docker login registry.dev.juniorisep.com -u $ACCESS_TOKEN -p $ACCESS_TOKEN
   script:
-    - docker build -t iseplife/front:$FRONT_VERSION -t iseplife/front:latest .
-    - docker push iseplife/front:$FRONT_VERSION
-    - docker push iseplife/front:latest
+    - docker build -t registry.dev.juniorisep.com/iseplife/front .
+    - docker push registry.dev.juniorisep.com/iseplife/front
   dependencies:
     - build-dev
   rules:
