--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "browserslist": {
     "production": [
-      ">0.2%",
+      ">0.7%",
       "not dead",
       "not op_mini all"
     ],
@@ -82,6 +82,7 @@
     "@typescript-eslint/parser": "^5.8.0",
     "autoprefixer": "^10.4.0",
     "babel-plugin-import": "^1.13.3",
+    "caniuse-lite": "^1.0.30001365",
     "customize-cra": "^1.0.0",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.3.0",
