--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "react-mount-animation": "^0.0.11",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.1.2",
+    "react-zoom-pan-pinch": "^2.1.3",
     "recoil": "^0.1.2",
     "tailwindcss-textshadow": "^2.1.3",
     "workbox-webpack-plugin": "^6.5.2"
