--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,7 +9,7 @@
       "type": "image/x-icon"
     }
   ],
-  "start_url": "./login",
+  "start_url": "./",
   "display": "standalone",
   "theme_color": "#3f51b5",
   "background_color": "#ffffff"
