--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
       "not op_mini all"
     ],
     "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
+      ">0.7%",
+      "not dead",
+      "not op_mini all"
     ]
   },
   "dependencies": {
@@ -64,6 +64,7 @@
     "react-zoom-pan-pinch": "^2.1.3",
     "recoil": "^0.1.2",
     "tailwindcss-textshadow": "^2.1.3",
+    "webp-hero": "^0.0.2",
     "workbox-webpack-plugin": "^6.5.2"
   },
   "devDependencies": {
