--- a/package.json
+++ b/package.json
@@ -53,8 +53,6 @@
     "lightbox-react": "^0.3.8",
     "pastel-color": "^1.0.3",
     "react": "^17.0.1",
-    "react-app-rewire-workbox": "^2.0.1",
-    "react-app-rewired": "^2.2.1",
     "react-big-calendar": "^0.35.0",
     "react-calendar": "^2.19.2",
     "react-dom": "^17.0.1",
@@ -66,15 +64,10 @@
     "react-zoom-pan-pinch": "^2.1.3",
     "recoil": "^0.1.2",
     "tailwindcss-textshadow": "^2.1.3",
-    "webp-hero": "^0.0.2",
-    "workbox-webpack-plugin": "^6.5.2"
+    "webp-hero": "^0.0.2"
   },
   "devDependencies": {
     "@tailwindcss/line-clamp": "^0.3.1",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
-    "@types/jest": "^24.0.0",
     "@types/leaflet": "^1.6.0",
     "@types/node": "^12.0.0",
     "@types/react": "^17.0.1",
@@ -84,17 +77,10 @@
     "@types/react-router-dom": "^5.1.3",
     "@typescript-eslint/eslint-plugin": "^5.8.0",
     "@typescript-eslint/parser": "^5.8.0",
-    "autoprefixer": "^10.4.0",
-    "babel-plugin-import": "^1.13.3",
-    "caniuse-lite": "^1.0.30001365",
     "customize-cra": "^1.0.0",
     "eslint-plugin-react": "^7.20.3",
     "eslint-plugin-react-hooks": "^4.3.0",
-    "less": "^3.11.1",
-    "less-loader": "^5.0.0",
-    "postcss": "^8.4.5",
-    "postcss-less": "^5.0.0",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "^5.0.1",
     "serve": "^13.0.2",
     "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.0.7",
