--- a/package.json
+++ b/package.json
@@ -30,60 +30,62 @@
     ]
   },
   "dependencies": {
-    "@ant-design/icons": "4.0.0",
-    "@ant-design/icons-svg": "^4.1.0",
+    "@ant-design/icons": "^4.7.0",
+    "@ant-design/icons-svg": "^4.2.1",
     "@craco/craco": "^6.4.5",
     "@fingerprintjs/fingerprintjs": "^3.3.3",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
-    "@fortawesome/react-fontawesome": "^0.1.18",
-    "antd": "^4.4.1",
-    "axios": "^0.24.0",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "antd": "^4.21.6",
+    "axios": "^0.27.2",
     "broadcast-channel": "^4.13.0",
     "craco-esbuild": "^0.5.1",
-    "date-fns": "^2.8.1",
-    "dexie": "^3.2.1",
+    "date-fns": "^2.28.0",
+    "dexie": "^3.2.2",
     "dexie-react-hooks": "^1.1.1",
-    "fast-average-color": "^7.1.0",
-    "formik": "^2.0.7",
-    "i18next": "^19.0.2",
-    "leaflet": "1.6.0",
+    "fast-average-color": "^9.1.1",
+    "formik": "^2.2.9",
+    "i18next": "^21.8.14",
+    "leaflet": "^1.8.0",
     "lightbox-react": "^0.3.8",
     "pastel-color": "^1.0.3",
-    "react": "^17.0.1",
-    "react-big-calendar": "^0.35.0",
-    "react-calendar": "^2.19.2",
-    "react-dom": "^17.0.1",
-    "react-i18next": "^11.2.6",
-    "react-leaflet": "^2.8.0",
+    "react": "^18.2.0",
+    "react-big-calendar": "^1.4.2",
+    "react-calendar": "^3.7.0",
+    "react-dom": "^18.2.0",
+    "react-i18next": "^11.18.1",
+    "react-leaflet": "^4.0.1",
     "react-mount-animation": "^0.0.11",
     "react-photo-gallery": "^8.0.0",
     "react-router-dom": "^5.1.2",
     "react-zoom-pan-pinch": "^2.1.3",
-    "recoil": "^0.1.2",
+    "recoil": "^0.7.4",
     "tailwindcss-textshadow": "^2.1.3",
     "webp-hero": "^0.0.2"
   },
   "devDependencies": {
-    "@tailwindcss/line-clamp": "^0.3.1",
-    "@types/leaflet": "^1.6.0",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.1",
-    "@types/react-big-calendar": "^0.24.2",
-    "@types/react-dom": "^17.0.1",
+    "@tailwindcss/line-clamp": "^0.4.0",
+    "@types/leaflet": "^1.7.11",
+    "@types/node": "^18.0.4",
+    "@types/react": "^18.0.15",
+    "@types/react-big-calendar": "^0.38.1",
+    "@types/react-calendar": "^3.5.1",
+    "@types/react-dom": "^18.0.6",
     "@types/react-leaflet": "^2.8.2",
-    "@types/react-router-dom": "^5.1.3",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
+    "@types/react-router-dom": "^5.3.3",
+    "@typescript-eslint/eslint-plugin": "^5.30.6",
+    "@typescript-eslint/parser": "^5.30.6",
     "customize-cra": "^1.0.0",
-    "eslint-plugin-react": "^7.20.3",
-    "eslint-plugin-react-hooks": "^4.3.0",
+    "eslint-plugin-react": "^7.30.1",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "react-scripts": "^5.0.1",
-    "serve": "^13.0.2",
+    "serve": "^14.0.1",
     "tailwind-scrollbar": "^1.3.1",
-    "tailwindcss": "^3.0.7",
-    "typescript": "^4.5.4"
-  }
+    "tailwindcss": "^3.1.6",
+    "typescript": "^4.7.4"
+  },
+  "packageManager": "yarn@3.2.1"
 }
