--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "i18next": "^21.8.14",
     "leaflet": "^1.8.0",
     "lightbox-react": "^0.3.8",
+    "moment": "^2.29.4",
     "pastel-color": "^1.0.3",
     "react": "^18.2.0",
     "react-big-calendar": "^1.4.2",
@@ -82,11 +83,16 @@
     "customize-cra": "^1.0.0",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "lodash": "^4.17.21",
     "react-scripts": "^5.0.1",
     "serve": "^14.0.1",
     "tailwind-scrollbar": "^1.3.1",
     "tailwindcss": "^3.1.6",
-    "typescript": "^4.7.4"
+    "typescript": "^4.7.4",
+    "workbox-expiration": "^6.5.3",
+    "workbox-precaching": "^6.5.3",
+    "workbox-routing": "^6.5.3",
+    "workbox-strategies": "^6.5.3"
   },
   "packageManager": "yarn@3.2.1"
 }
