--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -13,9 +13,32 @@ test:
   image: node:16.13-alpine
   variables:
     CI: "false"
+  cache:
+    key:
+      files:
+        - yarn.lock
+    paths:
+      - .yarn/
+      - yarn.lock.sha256sum
+  before_script:
+    - yarn set version berry
   script:
-    - yarn install --ignore-optional --frozen-lockfile --cache-folder .yarn
+    - yarn install --immutable
     - yarn run build
+    - |
+      YARN_LOCK_SHA256_HASH=$( sha256sum yarn.lock | awk '{ print $1 }')
+      echo "Current sha256 hash is $YARN_LOCK_SHA256_HASH"
+      echo "Checking sha256 hash of yarn.lock"
+
+      if ! sha256sum -c yarn.lock.sha256sum; then
+        echo "yarn.lock checksum does not match cache"
+        sha256sum yarn.lock > yarn.lock.sha256sum
+      else
+        echo "Cache is the same as before, removing cache files to prevent cache from updating"
+        rm -rf node_modules
+        rm -rf .yarn
+        rm -rf yarn.lock.sha256sum
+      fi
   rules:
     - if: '$CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "master" || $CI_MERGE_REQUEST_TARGET_BRANCH_NAME == "staging"'
 
@@ -97,10 +120,12 @@ docker-build:
   before_script:
     - FRONT_VERSION=$(grep -m1 version package.json | awk -F\" '{ print $4 }')
     - docker login -u $DOCKER_LOGIN -p $DOCKER_TOKEN
+    - docker login registry.dev.juniorisep.com -u $ACCESS_TOKEN -p $ACCESS_TOKEN
   script:
-    - docker build -t iseplife/front:$FRONT_VERSION -t iseplife/api:latest .
+    - docker build -t iseplife/front:$FRONT_VERSION -t iseplife/api:latest -t registry.dev.juniorisep.com/iseplife/front -t .
     - docker push iseplife/front:$FRONT_VERSION
     - docker push iseplife/front:latest
+    - docker push registry.dev.juniorisep.com/iseplife/front
   dependencies:
     - build-dev
   rules:
