--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   },
   "scripts": {
     "start": "REACT_APP_VERSION=$npm_package_version craco start",
-    "build": "cross-env SPA_VERSION=$(npm_package_version) GENERATE_SOURCEMAP=false craco build",
+    "build": "cross-env EACT_APP_VERSION=$npm_package_version GENERATE_SOURCEMAP=false craco build",
     "start-sw": "yarn run build && serve build",
     "test": "craco test",
     "eject": "craco eject"
