feat(posts): support links & break too long lines

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -78,6 +78,7 @@ build-dev:
     REACT_APP_HTTP_PROTOCOL: "https"
     REACT_APP_WS_PROTOCOL: "wss"
     REACT_APP_API_URL: "dev.iseplife.fr/api"
+    REACT_APP_URL: "https://dev.iseplife.fr"
   cache:
     key:
       files:
