--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "date-fns": "^2.28.0",
     "dexie": "^3.2.2",
     "dexie-react-hooks": "^1.1.1",
+    "expiry-map": "^2.0.0",
     "fast-average-color": "^9.1.1",
     "favicon-notify": "^0.1.7",
     "formik": "^2.2.9",
