--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@capacitor/keyboard": "4.0.1",
     "@capacitor/push-notifications": "^4.0.1",
     "@capacitor/status-bar": "4.0.1",
+    "@capgo/capacitor-updater": "^3.3.20",
     "@craco/craco": "^6.4.5",
     "@fingerprintjs/fingerprintjs": "^3.3.3",
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
@@ -20,6 +21,7 @@
     "@fortawesome/free-regular-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@ionic/core": "^6.2.4",
     "@ionic/react": "^6.0.0",
     "@ionic/react-router": "^6.0.0",
     "@juggle/resize-observer": "^3.4.0",
