refactor(app): renamed to IsepLife

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "iseplife",
-  "name": "iseplife",
+  "short_name": "IsepLife",
+  "name": "IsepLife",
   "lang": "fr",
   "icons": [
     {
